Fixed Paw being stretched on Chromium based browsers, removed scrolldown in favor of up

--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,7 @@ body{
     gap: 1rem;
 }
 .header img{
+    width: 2rem;
     height: 2rem;
     filter: invert(100%) sepia(0%) saturate(1821%) hue-rotate(226deg) brightness(110%) contrast(73%);
 }
